# podalize

./: .gitignore  DocumentGenerator.py  app.py  playground.py  pyproject.toml
podalize/: DocumentGenerator.py  __init__.py  __main__.py  app.py  configs.py  db.py  document_generator.py  logger.py  models.py  myutils.py  utils.py
podalize/cli/: __init__.py  __main__.py  app.py
podalize/webapp/: __init__.py  __main__.py  app.py
tests/: __init__.py  conftest.py  test_app.py  test_utils.py
tests/artifacts/: __init__.py
