[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "podalize"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.6.1"
pyannote-audio = "3.2.0"
pyannote-core = "5.0.0"
altair = "<5"
pydub = "0.25.1"
pylatex = "1.4.1"
python-magic = "0.4.27"
pytube = "12.1.0"
streamlit = "1.14.0"
torchaudio = "^2.3.1"
openai-whisper = "20231117"
yt-dlp = "^2024.5.27"
wordcloud = "^1.9.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
ruff = "^0.4.8"
pytest = "^8.2.2"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"

[tool.poe.tasks]
test = "pytest"
format = "ruff check --fix ."
app = "streamlit run podalize/__main__.py"

[tool.poe.tasks.debug]
cmd = "streamlit run podalize/__main__.py"
env = { LOG_LEVEL = "DEBUG" }

[tool.pytest.ini_options]
addopts = [
    "--cov=podalize",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # use of assert
    "S101",
]

fixable = ["ALL"]
unfixable = []
